SERVER-8374 Mongos incorrectly parses read preference spec with $query syntax